--- a/lab_5_3/lab_5_3.csproj
+++ b/lab_5_3/lab_5_3.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityMatrixDet.cs" />
     <Compile Include="IdentityMatrix.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TopTriangularMatrix.cs" />
+    <Compile Include="TopTriangularMatrixDet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
